2010.02.05: David Nichols
	 * API updates to export type information for basic value types to be
	   used in modules

2010.02.04: David Nichols
	 * fixed a bug where File::open*() would reset the encoding given in
	   the constructor
	 * overloaded methods in the File class for builtin overloaded method
	   testing

2010.02.03: David Nichols
	 * massive internal updates for function and method overloading

2010.01.26: David Nichols
	 * massive internal updates to streamline function, method, and 
	   call implementations
	 * fixed a bug processing arguments to in-object method calls in the
           background operator
	 * fixed a bug processing arguments to static method calls in the
           background operator
	 * implemented AbstractFunctionSignature C++ class for consistent
	   handling of type information for all function types
	 * added source location information to user parameter lists for
	   correct error reporting in parse exceptions

2010.01.23: David Nichols
	 * fixed line number reporting for type errors in initializer
	   expressions in public and private class member declarations

2010.01.22: David Nichols
	 * implement type enforcing at parse time for builtin constructors

2010.01.21: David Nichols
	 * infrastructure changes and new QoreClass APIs for setting return
	   type and parameter type information with builtin class methods;
	   added C++ functions: QoreClass::addMethodExtended() and
	   QoreClass::addMethodExtended2()
	 * API tuning for type information for builtin methods, added type
	   information for all File class methods
	 * new APIs for pre-defined type lists for type information (will be
	   required by the libsmoke-based qt4 module, for example)

2010.01.20: David Nichols
	 * added new library API: BuiltinFunctionList::add2() to allow for
	   setting the return type and parameter types and default parameter
	   values for builtin functions
	 * fixed symbol visibility in QoreTypeSafeReferenceHelper class